--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="content-text">
                 <p><span class="text-primary">HI There, I'm</span></p>
                 <h1>Oula Abd Almoty</h1>
-                <p class="title">Software Developer</p>
+                <p class="title">Full stuck Developer</p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/oula-abd-al-moty92/"target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
