--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="content-text">
                 <p><span class="text-primary">HI There, I'm</span></p>
                 <h1>Oula Abd Almoty</h1>
-                <p class="title">Full stuck Developer</p>
+                <p class="title">A web developer passionate about building clean and functional websites.</p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/oula-abd-al-moty92/"target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
@@ -39,7 +39,9 @@
                 </a>
                 <a href="https://www.instagram.com/oula_abdal_moty/"target="_blank">
                     <i class="fa-brands fa-square-instagram"></i>
-            
+                <a href="https://wa.me/905364605693" target="_blank" style="text-decoration: none; font-size: 30px;">
+                <i class="fab fa-whatsapp"></i>
+                </a>
 
                 </div>
                 <a href="cv.html" class="btn-primary" target="_blank">View My CV <i class="fa-solid fa-file"></i></a>
