--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <P id="title"></P>
 
 <script>
-  const text = "Welcome to My Professional Website";
+  const text = "Welcome to My Professional Website.";
   let i = 0;
   function typeWriter() {
     if (i < text.length) {
